DOCS-994: Adds redirect rules for docs.tigera.io

--- a/static/releases.html
+++ b/static/releases.html
@@ -30,7 +30,7 @@ that will appear in the old proxy sites. -->
       <div style="font-weight: bold; margin-top: 4px">Calico Enterprise</div>
       <div style="padding-left: 12px">
         <a
-          href=/calico-enterprise/3.15/about-calico-enterprise"
+          href="/calico-enterprise/3.15/about-calico-enterprise"
           style="font-weight: normal; color: #333333"
         >3.15 (early preview)</a
         >
