--- a/releases.html
+++ b/releases.html
@@ -31,16 +31,16 @@ that will appear in the old proxy sites. -->
       <div style="font-weight: bold; margin-top: 4px">Calico Enterprise</div>
       <div style="padding-left: 12px">
         <a
-          href="/calico-enterprise/3.17/about-calico-enterprise"
+          href="/calico-enterprise/3.17/about/"
           style="font-weight: normal; color: #333333"
-        >3.17</a
+        >3.17 </a
         >
       </div>
       <div style="padding-left: 12px">
         <a
           href="/calico-enterprise/3.16/about-calico-enterprise"
           style="font-weight: normal; color: #333333"
-        >3.16 (early preview)</a
+        >3.16 (early preview) </a
         >
       </div>
       <div style="padding-left: 12px">
