--- a/static/releases.html
+++ b/static/releases.html
@@ -31,7 +31,7 @@ that will appear in the old proxy sites. -->
       <div style="font-weight: bold; margin-top: 4px">Calico Enterprise</div>
       <div style="padding-left: 12px">
         <a
-          href="/calico-enterprise/3.17/about-calico-enterprise"
+          href="/calico-enterprise/3.17/about/"
           style="font-weight: normal; color: #333333"
         >3.17</a
         >
